Digital Resume | Fixed the overlapping issue of skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,7 @@ section {
 # Akills
 --------------------------------------------------------------*/
 .skills .progress {
-  height: 60px;
+  height: auto;
   display: block;
   background: none;
   border-radius: 0;
